# bijectif

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  TODO.txt  bijectif.desktop  build-mingw.sh  build-msys2.sh
resources/: Makefile  bijectif.rc
src/: command_delete.cpp  command_delete.h  command_edit.cpp  command_edit.h  command_id.cpp  command_id.h  command_insert.cpp  command_insert.h  command_paste.cpp  command_paste.h  delegate.cpp  delegate.h  main.cpp  model.cpp  model.h  modelitem.cpp  modelitem.h  settings.cpp  settings.h  window.cpp  window.h
tests/: CMakeLists.txt  main.cpp  settings.cpp  test_model.cpp  test_model.h  test_row.cpp  test_row.h
translations/: bijectif_fr.ts
